Archive2/77/f01c3e113f3226/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: 'cout' is not a member of 'std'
     std::cout << s << endl;
     ^
main.cpp:12:23: error: 'endl' was not declared in this scope
     std::cout << s << endl;
                       ^
